src/scope/snapshots/rnix_analyzer__scope__tree__tests__nested_get_scopes.snap
---
source: src/scope/tree.rs
expression: scopes
---
[
    Scope {
        id: Id {
            idx: 3,
        },
        kind: AttrSet,
        defines: {
            "c": Id {
                idx: 18,
            },
        },
        text_range: [6; 16),
    },
    Scope {
        id: Id {
            idx: 2,
        },
        kind: Lambda,
        defines: {
            "b": Id {
                idx: 17,
            },
        },
        text_range: [3; 16),
    },
    Scope {
        id: Id {
            idx: 1,
        },
        kind: Lambda,
        defines: {
            "a": Id {
                idx: 16,
            },
        },
        text_range: [0; 16),
    },
    Scope {
        id: Id {
            idx: 0,
        },
        kind: Root,
        defines: {
            "abort": Id {
                idx: 4,
            },
            "baseNameOf": Id {
                idx: 5,
            },
            "builtins": Id {
                idx: 6,
            },
            "derivation": Id {
                idx: 7,
            },
            "dirOf": Id {
                idx: 8,
            },
            "false": Id {
                idx: 1,
            },
            "fetchTarball": Id {
                idx: 9,
            },
            "import": Id {
                idx: 10,
            },
            "isNull": Id {
                idx: 11,
            },
            "map": Id {
                idx: 12,
            },
            "null": Id {
                idx: 2,
            },
            "placeholder": Id {
                idx: 13,
            },
            "removeAttrs": Id {
                idx: 14,
            },
            "throw": Id {
                idx: 3,
            },
            "toString": Id {
                idx: 15,
            },
            "true": Id {
                idx: 0,
            },
        },
        text_range: [0; 16),
    },
]
